# excel-dll-postgres-rust

./: .gitignore  Cargo.toml  test.xlsm
crypt/: Cargo.toml  encrypted.txt  encryption_key.txt  unencrypted.txt
crypt/src/: lib.rs  main.rs
excel_dll_postgres_rust/: Cargo.toml
excel_dll_postgres_rust/src/: api.rs  db.rs  error.rs  json_utils.rs  lib.rs  vba_str_io.rs  waste_basket
src/: lib.rs  vba_str_io.rs  vba_string_utils.rs
src/crypt/: config_unencrypted.txt  main.rs  mod.rs
