[package]
name = "excel_dll_postgres_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.5"
serde_json = "1.0.102"
indexmap = "2.0.0"
serde = "1.0.171"

[lib]
crate-type = ["cdylib"]
