[package]
name = "excel_dll_postgres_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tokio-postgres = "0.7.8"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
indexmap = "2.0.0"
chrono = "0.4.26"
postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }

[lib]
crate-type = ["cdylib"]
