[package]
name = "excel_dll_postgres_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
chrono = "0.4"
postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
debug = false