[package]
name = "excel_dll_postgres_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.2"
chrono = "0.4"
postgres-types = { version = "0.2", features = ["with-serde_json-1", "array-impls", "with-chrono-0_4"] }
rust_decimal = { version = "1.25.0", features = ["serde-float", "db-tokio-postgres"] }

[lib]
crate-type = ["cdylib"]